<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="8dp">

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name_please"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edittext_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:layout_below="@id/edittext_name"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_age"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/insert"
                android:id="@+id/button_submit"/>

            <LinearLayout
                android:id="@+id/database_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@id/button_submit"
                android:orientation="horizontal"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/read"
                    android:id="@+id/button_read"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:id="@+id/button_update"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:id="@+id/button_delete"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/database_layout"
                android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textview_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"/>
            </ScrollView>
        </RelativeLayout>

</layout>